--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <h1>Welcome to Zero To Pro Level 4 Batch 3</h1>
-    <h1>This is H1 test</h1>
+    <h1>This is H1</h1>
     <h2>This is H2</h2>
     <h3>This is H3</h3>
     <h4>This is H4</h4>
