--- a/Batch3BeerPj/index.html
+++ b/Batch3BeerPj/index.html
@@ -16,11 +16,11 @@
           <a href="#" class="brand_name">Mr_Beer</a>
         </div>
         <ul>
-          <li>Home</li>
-          <li>Shop</li>
-          <li>Blog</li>
-          <li>About</li>
-          <li>Contact</li>
+          <a href=""><li>Home</li></a>
+          <a href=""><li>Shop</li></a>
+          <a href=""><li>Blog</li></a>
+          <a href=""><li>About</li></a>
+          <a href=""><li>Contact</li></a>
         </ul>
       </nav>
 
