--- a/Batch3BeerPj/index.html
+++ b/Batch3BeerPj/index.html
@@ -29,7 +29,7 @@
           Speciall Creafted <br />
           Beer
         </h3>
-        <button class="readmore">Read Out</button>
+        <button class="readmore">Check Out</button>
       </div>
     </div>
   </body>
