--- a/Batch3BeerPj/index.html
+++ b/Batch3BeerPj/index.html
@@ -30,6 +30,7 @@
           Beer
         </h3>
         <button class="readmore">Check Out</button>
+        <p>Htein Linn</p>
       </div>
     </div>
   </body>
