--- a/Batch3BeerPj/index.html
+++ b/Batch3BeerPj/index.html
@@ -123,5 +123,43 @@
       <div><img src="images/photo2.png" alt="" class="photo2" /></div>
     </div>
     <!-- Part 3 end -->
+
+    <!-- Instock -->
+    <div class="white_background">
+      <div class="white_background_left">
+        <h2 class="perfect">21 DECEMBER</h2>
+        <h1>OKTOBERFEST</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque hic,
+          minima quia ipsa, earum aliquam nesciunt voluptas, quod sapiente
+          laudantium dolor nihil ipsum explicabo eveniet! Natus ipsam molestias
+          mollitia animi.
+        </p>
+        <button class="btnmore">Read more</button>
+      </div>
+      <div class="white_background_right">
+        <h2 class="perfect">14 FEBRUARY</h2>
+        <h1>NOW INSTOCKED IN NYC</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque hic,
+          minima quia ipsa, earum aliquam nesciunt voluptas, quod sapiente
+          laudantium dolor nihil ipsum explicabo eveniet! Natus ipsam molestias
+          mollitia animi.
+        </p>
+        <button class="btnmore">Read more</button>
+      </div>
+    </div>
+    <!-- Instock end -->
+
+    <!-- footer -->
+    <footer>
+      <p>Designed by <span class="perfect">Htein Linn</span></p>
+      <ul>
+        <li><a href=""><i class="fab fa-facebook-square fa-2x perfect"></a></i></li>
+        <li><a href=""><i class="fab fa-twitter-square fa-2x perfect"></a></i></li>
+        <li><a href=""><i class="fab fa-instagram-square fa-2x perfect"></a></i></li>
+      </ul>
+    </footer>
+    <!-- footer end -->
   </body>
 </html>
